2008-11-11  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtsp/gstrtspsrc.c: (gst_rtspsrc_create_transports_string),
	(gst_rtspsrc_change_state):
	Only send one transport at a time for improved compatibility with some
	broken servers. See #537832.

2008-11-11  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtsp/gstrtspsrc.c: (gst_rtspsrc_do_seek),
	(gst_rtspsrc_perform_seek):
	Only pause/play in the seek handler when the source was playing.
	Fixes #529379.

2008-11-11  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/matroska/matroska-mux.c:
	(gst_matroska_mux_handle_dirac_packet):
	Fix muxing of Dirac streams if the input already has the format
	we need, i.e. is the output of matroskademux.

2008-11-11  Stefan Kost  <ensonic@users.sf.net>

	* gst/avi/gstavimux.c:
	  Don't segfault on string typed tags being NULL. Fixes #560155.

2008-11-10  Mark Nauwelaerts  <mark.nauwelaerts@collabora.co.uk>

	* gst/matroska/matroska-mux.c: (aac_codec_data_to_codec_id),
	(gst_matroska_mux_audio_pad_setcaps):
	Fix mapping AAC profile to Matroska codec id.

2008-11-10  Mark Nauwelaerts  <mark.nauwelaerts@collabora.co.uk>

	* gst/qtdemux/qtdemux.c: (qtdemux_parse_trak),
	(qtdemux_video_caps), (qtdemux_audio_caps):
	Refactor some raw audio caps building, and handle >16-bit cases.
	Fix/replace building caps from a string description.

2008-11-10  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/audiofx/audiowsincband.c:
	* gst/audiofx/audiowsinclimit.c:
	* gst/cutter/gstcutter.c:
	  Make author name consistent with others.

2008-11-10  Wim Taymans  <wim.taymans@collabora.co.uk>

	Based on patch by: Eric Zhang <chao.zhang at access-company dot com>

	* gst/rtsp/gstrtspsrc.c: (gst_rtspsrc_perform_seek),
	(gst_rtspsrc_stream_configure_udp_sink):
	Pause the RTSP stream before doing a new play request.
	Make sure that adding the udpsinks does not cause the rtspsrc to become
	a sink. Fixes #559547.

2008-11-05  Sebastian Dröge  <sebastian.droege@collabora.co.uk>
